--- a/ModuleDTO/pom.xml
+++ b/ModuleDTO/pom.xml
@@ -24,5 +24,13 @@
         </plugins>
     </build>
 
+    <dependencies>
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.3.1</version>
+        </dependency>
+    </dependencies>
+
 
 </project>
