--- a/pom.xml
+++ b/pom.xml
@@ -28,4 +28,24 @@
     </build>
 
 
+
+    <profiles>
+        <profile>
+            <id>production</id>
+            <properties>
+                <type>production</type>
+            </properties>
+        </profile>
+        <profile>
+            <id>qa</id>
+            <properties>
+                <type>qa</type>
+            </properties>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+        </profile>
+    </profiles>
+
+
 </project>
