Multi module app is working, uber-jar ready

--- a/ModuleService/pom.xml
+++ b/ModuleService/pom.xml
@@ -36,6 +36,12 @@
             <artifactId>jaxb-runtime</artifactId>
             <version>2.3.2</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.kishkan.epam</groupId>
+            <artifactId>ModuleDTO</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 
